# rust-web-scraping

./: .gitignore  README.md
digi-inno-rust-scraper/: Cargo.toml
digi-inno-rust-scraper/src/: functions.rs  main.rs
rag-with-rust/: Cargo.toml
rag-with-rust/src/: functions.rs  main.rs
rust-spider/: Cargo.toml
rust-spider/src/: functions.rs  main.rs
web-crawler/: Cargo.toml
web-crawler-api/: Cargo.toml
web-crawler-api/src/: main.rs
web-crawler-api/src/api/: api.rs  crawl.rs  health.rs  mod.rs  spider.rs  spider_functions.rs
web-crawler-api/src/models/: crawled_data_response.rs  input.rs  mod.rs  response.rs  url.rs  webpage_data.rs
web-crawler-api/src/repository/: database.rs
web-crawler-refactored/: Cargo.toml
web-crawler-refactored/src/: crawler_config.rs  functions.rs  main.rs
web-crawler/src/: functions.rs  models.rs
