[package]
name = "rust-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider = { version = "1.80.65", features = ["smart"]}
scraper = "0.18.1"
regex = "1.6"
reqwest = { version = "0.11.23", features = ["blocking"] }
polars = "0.15.1"

