[package]
name = "web-crawler-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.5"
tokio = { version = "1", features = ["full"] }
rocket = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"