[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider = { version = "1.45.6", features = ["control"] }
scraper = "0.16"
serde = "1.0"
serde_json = "1.0"
regex = "1.6"
csv = "1.1.6"
url = "2.2.2"
chrono = "0.4"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
dotenv = "0.15.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }